<resources>
    <string name="ict1">Introduction to the World  of Technology, Why Learn About Computers and  Technology? , Data vs. Information 11, Computers Then and Now , Hardware ,Software  , Computer Users and Professionals ,Embedded Computers, Mobile Devices 20 ,Personal Computers , Servers , Mainframe Computers ,Supercomputers , Computer Networks and the Internet, What Are the Internet and the World Wide web, Accessing a Network or the Internet ,Surfing the Web , Searching the Web , E-Mail ,Technology and Society , Benefits of a Technology-Oriented  Society,  The System Unit, Processing,  and Memory 50 Overview 51 Data and Program Representation , Digital Data Representation , Representing Numerical Data: The Binary  Numbering System , Coding Systems for Text-Based Data , Coding Systems for Other Types of Data , Representing Software Programs: Machine Language , Storage Overview , Storage Systems Characteristics , Storage Media and Storage Devices , Volatility , Random vs. Sequential Access , Logical vs. Physical Representation , Type of Storage Technology Used Other Types of Storage Systems , Network and Cloud Storage Systems , Smart Cards , Storage Systems for Large Computer  Systems, Evaluating Your Storage Alternatives .</string>
    <!--    <string name="s5">Semester 5</string>-->
    <!--    <string name="s5">Semester 5</string>-->
    <!--    <string name="s5">Semester 5</string>-->
    <!--    <string name="s5">Semester 5</string>-->
    <!--    <string name="s5">Semester 5</string>-->
    <string name="app_name">Learnify</string>
    <string name="welcome">Welcome to Learnify!</string>
    <string name="slogan">Streamline your studies and achieve success</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="login2">Sign In</string>
    <string name="login3">SIGN IN</string>
    <string name="signup2">Sign Up</string>
    <string name="back">back</string>
    <string name="create">Create New Account</string>
    <string name="fname">     First Name</string>
    <string name="lname">     Last Name</string>
    <string name="mail">      Email Address</string>
    <string name="pwd">      Password</string>
    <string name="dot">.</string>
    <string name="you">   First Name</string>
    <string name="outline">Course Outline</string>
    <string name="material">Course Material</string>
    <string name="s1">Semester 1</string>
    <string name="s2">Semester 2</string>
    <string name="s3">Semester 3</string>
    <string name="s4">Semester 4</string>
    <string name="s5">Semester 5</string>
    <string name="quran">Quranic Translation</string>
    <string name="maths">Discrete Mathematics</string>
    <string name="ict">Intro to Computing Technology</string>
    <string name="stat">Probability and Statistics</string>
    <string name="phy">Physics</string>
    <string name="eng">English Composition</string>
    <string name="pf">Programming Fundamentals</string>
    <string name="math2">Linear Algebra</string>
    <string name="eng2">Business Communication</string>
    <string name="isl">Islamiyat</string>
    <string name="pst">Pakistan Studies</string>
</resources>