<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".Semester2_Outline">

    <Button
        android:id="@+id/button28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightgrey"
        android:text="@string/dot"
        android:outlineProvider="none"
        android:textColor="@color/lightgrey"
        android:drawableLeft="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView17"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="140dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/s2"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/icon"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/app_name"
        android:textColor="#040404"
        app:layout_constraintBottom_toTopOf="@+id/button29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button29"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/pf"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button30"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/math2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button31"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/eng2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button32"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/pst"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button33"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/isl"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button34"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/quran"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>