<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".Semester1_Outline">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/icon"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/lightgrey"
        android:text="@string/dot"
        android:outlineProvider="none"
        android:textColor="@color/lightgrey"
        android:drawableLeft="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="140dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/s1"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/app_name"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button22"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ict"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button23"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/stat"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button24"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/maths"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button25"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/phy"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button26"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/eng"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button27"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/quran"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>