<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".CourseMaterial">

    <Button
        android:id="@+id/button17"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/s2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button15"
        android:layout_width="53dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/lightgrey"
        android:drawableLeft="@drawable/arrow"
        android:fontFamily="@font/poppins_medium"
        android:outlineProvider="none"
        android:text="@string/dot"
        android:textColor="@color/lightgrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="108dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/material"
        android:textColor="#030303"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="157dp"
        android:layout_height="0dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/s3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button16"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/s1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button19"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:text="@string/s4"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button20"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/s5"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>