<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/lightgrey"
    android:layout_height="match_parent"
    tools:context=".CourseOutline">

    <Button
        android:id="@+id/button14"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/s5"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/s4"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/s2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="37dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/lightgrey"
        android:drawableLeft="@drawable/arrow"
        android:outlineProvider="none"
        android:text="@string/dot"
        android:textColor="@color/lightgrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="96dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/outline"
        android:textColor="#030303"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/app_name"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/s1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/s3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>