<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".login">

    <Button
        android:id="@+id/btnBackLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightgrey"
        android:drawableLeft="@drawable/arrow"
        android:outlineProvider="none"
        android:text="@string/dot"
        android:textColor="@color/lightgrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="172dp"

        android:text="@string/login2"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"

        android:text="@string/app_name"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/etEmailAddressLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEmailAddressLogin"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="   Email Address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="52dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="   Password"

        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/black"

        android:text="@string/login3"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>