<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".Details">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="127dp"
        android:layout_height="122dp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"

        android:text="@string/app_name"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="187dp"
        android:layout_height="137dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pc" />

    <Button
        android:id="@+id/button7"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/white"

        android:text="@string/outline"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="48dp"
    android:backgroundTint="@color/white"

    android:text="@string/material"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSignOut"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="@color/white"

        android:text="Sign Out"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>